NewTiele added otnthe html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h3>Hello world</h3>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, quasi.</p>
+    <h1>Heatitgh title1</h1>
 </body>
 </html>
